prevent contents sidebar from being clipped on record page
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/branches/gus4@17985 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk3.css
+++ b/View/webapp/wdk/css/wdk3.css
@@ -282,6 +282,11 @@ body {
   transition: left 250ms ease;
 }
 
+.wdk-RecordMain {
+  /* make prevent contents panel from being clipped. */
+  min-height: 65vh;
+}
+
 .wdk-RecordSidebar {
   left: -322px;
   width: 270px;
